@@ -1,0 +1,14 @@
+
+list__map_corresponding/3: failed as expected on inputs [] [1]
+list__map_corresponding/3: failed as expected on inputs [1] []
+list__map_corresponding/3: succeeded correctly on inputs [] []
+list__map_corresponding/3: succeeded correctly on inputs [1, 2, 3] [4, 5, 6]
+
+list__map_corresponding3/4: failed as expected on inputs [] [] [1]
+list__map_corresponding3/4: failed as expected on inputs [] [1] []
+list__map_corresponding3/4: failed as expected on inputs [] [1] [1]
+list__map_corresponding3/4: failed as expected on inputs [1] [] []
+list__map_corresponding3/4: failed as expected on inputs [1] [] [1]
+list__map_corresponding3/4: failed as expected on inputs [1] [1] []
+list__map_corresponding3/4: succeeded correctly on inputs [] [] []
+list__map_corresponding3/4: succeeded correctly on inputs [1, 2, 3] [4, 5, 6] [7, 8, 9]
